# parakeet-mlx

./: .gitignore  README.md  pyproject.toml
parakeet_mlx/: __init__.py  alignment.py  attention.py  audio.py  cache.py  cli.py  conformer.py  ctc.py  parakeet.py  rnnt.py  tokenizer.py  utils.py
