[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parakeet-mlx"
version = "0.1.0"
description = "An implementation of the Nvidia's Parakeet models for Apple Silicon using MLX."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "audiofile>=1.5.1",
    "audresample>=1.3.3",
    "dacite>=1.9.2",
    "huggingface-hub>=0.30.2",
    "librosa>=0.11.0",
    "mlx>=0.22.1",
    "numpy>=2.2.5",
    "typer>=0.15.3",
]

[project.scripts]
parakeet-mlx = "parakeet_mlx.cli:app"
